@@ -8,6 +8,10 @@ Warden.test_mode!
 #   So I can close my account
 feature 'User delete', :devise, js: true do
 
+  after(:each) do
+    Warden.test_reset!
+  end
+
   # Scenario: User can delete own account
   #   Given I am signed in
   #   When I delete my account
